# project_slam_coko

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: default.toml
configs/coko/: aria_room0.toml  base.toml  replica_office0.toml
docker/: Dockerfile  docker-compose.yml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2.md  PRD-07-production.md  README.md
scripts/: bootstrap_cuda_uv.sh  prepare_slam_data.py  render_replica_rgbd.py
src/anima_amaterasu/: __init__.py
src/anima_slam_coko/: __init__.py  config.py  device.py  train.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/api/: test_app.py
tests/config/: test_settings.py
tests/data/: test_replica_loader.py
tests/eval/: test_bandwidth.py  test_replica_metrics.py
tests/io/: test_submap_schema.py
tests/keyframing/: test_policy.py
tests/loop_closure/: test_detector.py
tests/mapping/: test_compaction.py
tests/pgo/: test_gtsam_solver.py
tests/production/: test_release_checks.py
tests/registration/: test_pipeline.py
tests/ros2/: test_message_adapters.py
tests/tracking/: test_odometry.py
(+37 files in other folders)
